# components-registry-service-server/src/main/kotlin/org/octopusden/octopus/components/registry/server/service/impl/AuditServiceImpl.kt
@@ -156,6 +156,10 @@ class AuditServiceImpl(
             spec = spec.and(Specification { root, _, cb -> cb.lessThan(root.get<Instant>("changedAt"), to) })
         }
 
+        filter.jiraTaskKey?.let { jiraTaskKey ->
+            spec = spec.and(Specification { root, _, cb -> cb.equal(root.get<String>("jiraTaskKey"), jiraTaskKey) })
+        }
+
         return spec
     }
 
